remove logger from production build

--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -23,6 +23,18 @@
     }
   }
 
+  .test-warning{
+    font-size: 24px;
+    color: red;
+    margin-top: 30px;
+    text-align: center;
+  }
+
+  button {
+    margin-left: auto;
+    margin-top: 50px;
+  }
+
   .total {
     margin-top: 30px;
     margin-left: auto;
